[package]
name = "with-app"
version = "0.1.1"
description = "with-app"
authors = ["m1m1sha"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "process-all",
  "objc-exception",
  "wry",
  "system-tray",
  "updater",
  "path-all",
  "fs-all",
  "process-command-api",
], default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding = "^0.2"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
sysinfo = "^0.30"
with = { git = "https://github.com/m1m1sha/with", branch = "dev" }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
