[package]
name = "with-app"
version = "0.2.0"
description = "with-0.2.0"
authors = ["m1m1sha"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "^1"
encoding = "^0.2"
anyhow = "^1"
sysinfo = "^0.30"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
