[package]
name = "with-app"
version = "0.2.0-alpha"
description = "with-0.2.0-alpha"
authors = ["m1m1sha"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta.3"
tauri-plugin-fs = "2.0.0-beta.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "^1"
serde_repr = "0.1"
encoding = "^0.2"
anyhow = "^1"
thiserror = "^1"
sysinfo = "^0.30"
tokio = { version = "^1", features = ["full"] }
tracing = "^0.1"
tracing-subscriber = "^0.3"
fastrand = "^2"
winreg = "^0.52"
async-channel = "^2.2"
tauri-plugin-notification = "2.0.0-beta.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
